# portfolio-fing-lukas

./: README.md
programacion-funcional/: AST.hs  Estudiantes.hs  JSONLibrary.hs  ParserCombinators.hs  Tests.hs  TypedJSON.hs  example.json
programacion-orientada-a-objetos/: Makefile  principal
programacion-orientada-a-objetos/include/: Cliente.h  Comentario.h  Compra.h  CompraProd.h  ContProducto.h  ContUsuario.h  DataCliente.h  DataUsuario.h  DataVendedor.h  Fabrica.h  IContProducto.h  IContUsuario.h  ISuscripciones.h  Producto.h  ProductosEnPromo.h  Promocion.h  TDireccion.h  TFecha.h  TFechaActual.h  TNotificacion.h  Usuario.h  Vendedor.h  leer.h
programacion-orientada-a-objetos/src/: Cliente.cpp  Comentario.cpp  Compra.cpp  CompraProd.cpp  ContProducto.cpp  ContUsuario.cpp  DataCliente.cpp  DataUsuario.cpp  DataVendedor.cpp  Fabrica.cpp  Producto.cpp  ProductosEnPromo.cpp  Promocion.cpp  TComentario.cpp  TDireccion.cpp  TFecha.cpp  TFechaActual.cpp  TNotificacion.cpp  Usuario.cpp  (+3 more)
redes-de-computadoras/: IP_CONFIG  config.sh  killall.sh  pwospf_topo.py  run_mininet.sh  run_pox.sh  run_sr.sh
robotica-autonoma/: README.md  ideas.txt  lidar_filter.py  lidar_filter.py_Zone.Identifier  mymap.pgm  mymap.yaml  tree.md  wsl_camera.py
robotica-autonoma/src/camara_publisher/: package.xml  setup.cfg  setup.py
robotica-autonoma/src/camara_publisher/camara_publisher/: camara_publisher_function.py
robotica-autonoma/src/camara_publisher/resource/: camara_publisher_Zone.Identifier
robotica-autonoma/src/francesca_navigation/: CMakeLists.txt  package.xml
robotica-autonoma/src/francesca_navigation/launch/: cartographer.launch.py  navigation2.launch.py  slam.launch.py
robotica-autonoma/src/francesca_navigation/param/: francesca.yaml
robotica-autonoma/src/francesca_navigation/rviz/: francesca_cartographer.rviz  francesca_navigation2.rviz
robotica-autonoma/src/francesca_pkg/bringup/: CMakeLists.txt  package.xml
robotica-autonoma/src/francesca_pkg/bringup/config/: francesca.rviz  francesca_controllers.yaml
robotica-autonoma/src/francesca_pkg/bringup/launch/: francesca.launch.py  francesca_gz.launch.py  joystick.launch.py
robotica-autonoma/src/francesca_pkg/bringup/scripts/: square_move.py
taller-desarrollo-software/: README.md
(+170 files in other folders)
