<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>francesca_navigation</name>
  <version>0.0.0</version>
  <description>
    Navigation support for Francesca
  </description>
  <maintainer email="jvisca@fing.edu.uy">Jorge Visca</maintainer>
  <license>Apache 2.0</license>
  <author email="jvisca@fing.edu.uy">Jorge Visca</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
